--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Chris Wahlfeldt",
   "license": "MIT",
   "scripts": {
-    "start": "cd ./webpack && webpack-dev-server --env=dev --progress --profile --colors",
+    "start": "cd ./webpack && webpack-dev-server --env=dev",
     "build:dev": "rm -rf ./build && cd webpack && webpack --env=dev --progress --profile --colors",
     "build:prod": "rm -rf ./build && cd webpack && webpack --env=prod --progress --profile --colors",
     "cleanup": "rm -rf ./build"
@@ -14,6 +14,7 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
@@ -25,6 +26,7 @@
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
+    "webpack-dashboard": "^0.4.0",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
@@ -35,6 +37,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
     "redux": "^3.6.0"
   }
 }
